--- a/styles.css
+++ b/styles.css
@@ -230,11 +230,11 @@ form input {
 }
 
 .default-buttons {
-  transform: translateX(100%); 
+  transform: translateX(100%);
   transition: transform 0.3s ease;
   position: fixed;
   top: 0;
-  right: calc((100% - 480px) / 2);
+  right: 0; 
   height: 100vh;
   width: 310px;
   background-color: white;
@@ -243,6 +243,28 @@ form input {
 
 .show-default-buttons {
   transform: translateX(0);
+}
+
+@media (min-width: 480px) {
+  .default-buttons {
+    right: calc((100% - 480px) / 2); 
+  }
+}
+
+@media (max-width: 400px) {
+  .default-buttons {
+    width: 280px;
+  }
+
+  .menu-title {
+    padding: 40px 20px 0 20px;
+  }
+}
+
+@media (max-width: 350px) {
+  .default-buttons {
+    width: 250px;
+  }
 }
 
 .pointer-cursor {
